hphp/hack/test/typecheck/references/call_time_reference2.php.exp
File "call_time_reference2.php", line 4, characters 14-14:
An expression is expected here. (Parsing[1002])
